added number points slider, range padding

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -320,41 +320,53 @@
     "\n",
     "\n",
     "# Create our 4 plots\n",
-    "singleCountsAPlot = figure(plot_height=350, plot_width=700, title=\"Single Counts on Port A\",\n",
+    "singleCountsAPlot = figure(plot_height=370, plot_width=750, title=\"Single Counts on Port A\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = AHover)\n",
     "\n",
-    "singleCountsBPlot = figure(plot_height=350, plot_width=700, title=\"Single Counts on Port B\",\n",
+    "singleCountsBPlot = figure(plot_height=370, plot_width=750, title=\"Single Counts on Port B\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = BHover)\n",
     "\n",
-    "coincidenceCountsABPlot = figure(plot_height=350, plot_width=700, \n",
+    "coincidenceCountsABPlot = figure(plot_height=370, plot_width=750, \n",
     "                                 title=\"Coincidence Counts (- Calculated Accidental Counts)\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = ABHover)\n",
     "\n",
-    "ratioCountsPlot = figure(plot_height=350, plot_width=700, title=\"Ratio of Coincidences to Total Counts\",\n",
+    "ratioCountsPlot = figure(plot_height=370, plot_width=750, title=\"Ratio of Coincidences to Total Counts\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = RatioHover)\n",
     "\n",
     "\n",
-    "# Set up slider for user to choose counting time (100ms to 1000ms)\n",
-    "countingTimeSlider = Slider(start=0.1, end=5, value=1, step=0.1, title=\"Counting Time (s)\", width = 150)\n",
+    "# Set up slider for user to choose counting time (100ms to 5s)\n",
+    "countingTimeSlider = Slider(start=0.1, end=5, value=1, step=0.1, title=\"Counting Time (s)\", width = 200)\n",
     "countingTime = countingTimeSlider.value # initialize the variable to store the counting interval\n",
     "\n",
-    "# How many points should be displayed on screen at a time. Can turn this into a user input widget\n",
-    "numberPointsDisplayed = 20\n",
+    "\n",
+    "# Set up slider for user to choose how many points are displayed (10 to 100)\n",
+    "numberPointsSlider = Slider(start=10, end=100, value=20, step=5, title=\"Number of Points Displayed\", width = 200)\n",
+    "numberPointsDisplayed = numberPointsSlider.value # initialize the variable to store the counting interval\n",
+    "\n",
     "\n",
     "\n",
     "# Make the plots display only the most recent \"numberPointsDisplayed\" points\n",
     "# This way, the graph will scroll to show the newest points\n",
+    "# range_padding keeps the end points a certain distance from the edge of the graph\n",
     "singleCountsAPlot.x_range.follow = \"end\"\n",
-    "singleCountsAPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "singleCountsAPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
+    "singleCountsAPlot.x_range.range_padding = 0.1\n",
+    "singleCountsAPlot.x_range.range_padding_units = 'absolute'\n",
     "    \n",
     "singleCountsBPlot.x_range.follow = \"end\"\n",
-    "singleCountsBPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "singleCountsBPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
+    "singleCountsBPlot.x_range.range_padding = 0.1\n",
+    "singleCountsBPlot.x_range.range_padding_units = 'absolute'\n",
     "    \n",
     "coincidenceCountsABPlot.x_range.follow = \"end\"\n",
-    "coincidenceCountsABPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "coincidenceCountsABPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
+    "coincidenceCountsABPlot.x_range.range_padding = 0.1\n",
+    "coincidenceCountsABPlot.x_range.range_padding_units = 'absolute'\n",
     "\n",
     "ratioCountsPlot.x_range.follow = \"end\"\n",
-    "ratioCountsPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "ratioCountsPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
+    "ratioCountsPlot.x_range.range_padding = 0.1\n",
+    "ratioCountsPlot.x_range.range_padding_units = 'absolute'\n",
     "\n",
     "\n",
     "\n",
@@ -389,13 +401,13 @@
     "ratioCountsPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
     "# Set up START/STOP button, to start and stop counting\n",
-    "startStopButtonGroup = RadioButtonGroup(labels=[\"START\", \"STOP\"], active=1, width = 150)\n",
+    "startStopButtonGroup = RadioButtonGroup(labels=[\"START\", \"STOP\"], active=1, width = 200)\n",
     "\n",
     "# Set up the reset button, to clear the graph of all data\n",
-    "resetGraphButton = Button(label=\"Reset\", width = 150)\n",
+    "resetGraphButton = Button(label=\"Reset\", width = 200)\n",
     "\n",
     "# Set up the save datda button, to export the data to a csv file\n",
-    "saveDataButton = Button(label=\"Save Data\", width = 150)\n",
+    "saveDataButton = Button(label=\"Save Data\", width = 200)\n",
     "\n",
     "\n",
     "    \n",
@@ -572,6 +584,12 @@
     "    # use global variable\n",
     "    global callback_id\n",
     "    \n",
+    "    global numberPointsDisplayed\n",
+    "    \n",
+    "    global countingTime\n",
+    "    \n",
+    "    countingTime = countingTimeSlider.value\n",
+    "    \n",
     "    # if the START button is on\n",
     "    if startStopButtonGroup.active == 0:\n",
     "        \n",
@@ -579,31 +597,51 @@
     "        curdoc().remove_periodic_callback(callback_id)\n",
     "        \n",
     "        # Add a periodic_callback, the callback interval is stored in the variable countingTime\n",
-    "        #global countingTime\n",
-    "        countingTime = countingTimeSlider.value\n",
     "        callback_id = curdoc().add_periodic_callback(update_data, countingTime*1000)\n",
     "        \n",
     "    # How many points should be displayed on screen at a time. Can turn this into a user input widget\n",
-    "    numberPointsDisplayed = 20\n",
+    "    numberPointsDisplayed = numberPointsSlider.value\n",
     "\n",
     "\n",
     "    # Make the plots display only the most recent \"numberPointsDisplayed\" points\n",
     "    # This way, the graph will scroll to show the newest points\n",
     "    singleCountsAPlot.x_range.follow = \"end\"\n",
-    "    singleCountsAPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "    singleCountsAPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
     "\n",
     "    singleCountsBPlot.x_range.follow = \"end\"\n",
-    "    singleCountsBPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "    singleCountsBPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
     "\n",
     "    coincidenceCountsABPlot.x_range.follow = \"end\"\n",
-    "    coincidenceCountsABPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "    coincidenceCountsABPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
     "\n",
     "    ratioCountsPlot.x_range.follow = \"end\"\n",
-    "    ratioCountsPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "    ratioCountsPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
     "\n",
     "        \n",
     "        \n",
+    "def change_number_points(attr, old, new):\n",
     "    \n",
+    "    global numberPointsDisplayed\n",
+    "    global countingTime\n",
+    "    \n",
+    "    # retrieve slider values\n",
+    "    numberPointsDisplayed = numberPointsSlider.value \n",
+    "    countingTime = countingTimeSlider.value\n",
+    "\n",
+    "\n",
+    "    # Make the plots display only the most recent \"numberPointsDisplayed\" points\n",
+    "    # This way, the graph will scroll to show the newest points\n",
+    "    singleCountsAPlot.x_range.follow = \"end\"\n",
+    "    singleCountsAPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
+    "\n",
+    "    singleCountsBPlot.x_range.follow = \"end\"\n",
+    "    singleCountsBPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
+    "\n",
+    "    coincidenceCountsABPlot.x_range.follow = \"end\"\n",
+    "    coincidenceCountsABPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
+    "\n",
+    "    ratioCountsPlot.x_range.follow = \"end\"\n",
+    "    ratioCountsPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
     "\n",
     "    \n",
     "    \n",
@@ -620,16 +658,19 @@
     "saveDataButton.js_on_click(CustomJS(args=dict(source=source),\n",
     "                            code=open(join(dirname(__file__), \"download.js\")).read()))\n",
     "\n",
+    "# When number of points is changed, change graph\n",
+    "numberPointsSlider.on_change('value', change_number_points)\n",
+    "\n",
+    "\n",
+    "\n",
     "# Set up layouts and add to document\n",
     "\n",
     "# create a column of user input widgets\n",
     "userInputWidgets = column(startStopButtonGroup, \n",
-    "                          countingTimeSlider, \n",
+    "                          countingTimeSlider,\n",
+    "                          numberPointsSlider,\n",
     "                          resetGraphButton,\n",
-    "                          saveDataButton#, \n",
-    "                          #averageValueText[0],\n",
-    "                          #averageValueText[1],\n",
-    "                          #averageValueText[2]\n",
+    "                          saveDataButton\n",
     "                         )\n",
     "\n",
     "\n",
