--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -480,6 +480,7 @@
     "        recentMaxA = max(source.data['singleCountsA'][-5:])\n",
     "        recentMaxB = max(source.data['singleCountsB'][-5:])\n",
     "        recentMaxAB = max(source.data['coincidenceCountsAB'][-5:])\n",
+    "        recentMaxRatio = max(source.data['ratioCounts'][-5:])\n",
     "        \n",
     "        \n",
     "        # if the recent max value is greater than 0:\n",
@@ -517,6 +518,18 @@
     "            \n",
     "            # reset y-axis to -10 to 10\n",
     "            coincidenceCountsABPlot.y_range.update(start = -100, end = 1000)\n",
+    "            \n",
+    "        # if the recent max value is greater than 0:\n",
+    "        if recentMaxRatio > 0:\n",
+    "        \n",
+    "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
+    "            ratioCountsPlot.y_range.update(start = -recentMaxRatio*0.1, end = recentMaxRatio*1.5)\n",
+    "        \n",
+    "        # else if recent max is 0:\n",
+    "        else:\n",
+    "            \n",
+    "            # reset y-axis to -10 to 10\n",
+    "            ratioCountsPlot.y_range.update(start = -0.05, end = 0.2)\n",
     "    \n",
     "    \n",
     "    # add 1 to reset y-axis counter\n",
@@ -535,7 +548,7 @@
     "\n",
     "coincidenceCountsABPlot.y_range = Range1d(-100, 1000)\n",
     "\n",
-    "\n",
+    "ratioCountsPlot.y_range = Range1d(-0.01, 0.51)\n",
     "\n",
     "\n",
     "# Define a variable callback_id, which is attached to the periodic_callback function\n",
