immediately show spikes, instead of 5 point wait

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -419,6 +419,28 @@
     "# use this to reset y-axis scaling periodically\n",
     "resetYAxisCount = 0\n",
     "\n",
+    "\n",
+    "# use these to keep track of the end of y_range for all four plots\n",
+    "yEndA = 1000\n",
+    "\n",
+    "yEndB = 1000\n",
+    "\n",
+    "yEndAB = 1000\n",
+    "\n",
+    "yEndRatio = 0.51\n",
+    "\n",
+    "# Set y_ranges for all three plots\n",
+    "# if you do not do this, you will not be able to alter it later\n",
+    "\n",
+    "singleCountsAPlot.y_range = Range1d(-100, yEndA)\n",
+    "\n",
+    "singleCountsBPlot.y_range = Range1d(-100, yEndB)\n",
+    "\n",
+    "coincidenceCountsABPlot.y_range = Range1d(-100, yEndAB)\n",
+    "\n",
+    "ratioCountsPlot.y_range = Range1d(-0.01, yEndRatio)\n",
+    "\n",
+    "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
     "# This function appends new data to our plots through the stream data command\n",
     "def update_data():\n",
@@ -466,8 +488,47 @@
     "    # Stream the new data to the plots.\n",
     "    source.stream(new_data)\n",
     "    \n",
+    "    # use global variable\n",
+    "    global yEndA\n",
+    "    global yEndB\n",
+    "    global yEndAB\n",
+    "    global yEndRatio\n",
+    "    \n",
     "    \n",
     "    # Rescale y-axes as needed:\n",
+    "    \n",
+    "    \n",
+    "    # find the value of the most recent data point\n",
+    "    lastA = source.data['singleCountsA'][-1]\n",
+    "    lastB = source.data['singleCountsB'][-1]\n",
+    "    lastAB = source.data['coincidenceCountsAB'][-1]\n",
+    "    lastRatio = source.data['ratioCounts'][-1]\n",
+    "    \n",
+    "    \n",
+    "    # check for spikes outside of y_range on all four plots\n",
+    "    # if new point y value is outside of y_range, then change range\n",
+    "    \n",
+    "    if lastA > yEndA:   \n",
+    "        # reset the y-axis scaling to show this new high point\n",
+    "        yEndA = lastA*1.5\n",
+    "        singleCountsAPlot.y_range.update(start = -lastA*0.1, end = yEndA)\n",
+    "        \n",
+    "    if lastB > yEndB:   \n",
+    "        # reset the y-axis scaling to show this new high point\n",
+    "        yEndB = lastB*1.5\n",
+    "        singleCountsBPlot.y_range.update(start = -lastB*0.1, end = yEndB)\n",
+    "        \n",
+    "    if lastAB > yEndAB:   \n",
+    "        # reset the y-axis scaling to show this new high point\n",
+    "        yEndAB = lastAB*1.5\n",
+    "        coincidenceCountsABPlot.y_range.update(start = -lastAB*0.1, end = yEndAB)\n",
+    "        \n",
+    "    if lastRatio > yEndRatio:   \n",
+    "        # reset the y-axis scaling to show this new high point\n",
+    "        yEndRatio = lastRatio*1.5\n",
+    "        ratioCountsPlot.y_range.update(start = -lastRatio*0.1, end = yEndRatio)\n",
+    "        \n",
+    "        \n",
     "    \n",
     "    # if reset y axis count is divisible by 5 with no remainder\n",
     "    # aka do what is in the if statement once every 5 data points\n",
@@ -487,49 +548,57 @@
     "        if recentMaxA > 0:\n",
     "        \n",
     "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
-    "            singleCountsAPlot.y_range.update(start = -recentMaxA*0.1, end = recentMaxA*1.5)\n",
+    "            yEndA = recentMaxA*1.5\n",
+    "            singleCountsAPlot.y_range.update(start = -recentMaxA*0.1, end = yEndA)\n",
     "        \n",
     "        # else if recent max is 0:\n",
     "        else:\n",
     "            \n",
     "            # reset y-axis to -10 to 10\n",
-    "            singleCountsAPlot.y_range.update(start = -100, end = 1000)\n",
+    "            yEndA = 1000\n",
+    "            singleCountsAPlot.y_range.update(start = -100, end = yEndA)\n",
     "            \n",
     "        # if the recent max value is greater than 0:\n",
     "        if recentMaxB > 0:\n",
     "        \n",
     "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
-    "            singleCountsBPlot.y_range.update(start = -recentMaxB*0.1, end = recentMaxB*1.5)\n",
+    "            yEndB = recentMaxB*1.5\n",
+    "            singleCountsBPlot.y_range.update(start = -recentMaxB*0.1, end = yEndB)\n",
     "        \n",
     "        # else if recent max is 0:\n",
     "        else:\n",
     "            \n",
     "            # reset y-axis to -10 to 10\n",
-    "            singleCountsBPlot.y_range.update(start = -100, end = 1000)\n",
+    "            yEndB = 1000\n",
+    "            singleCountsBPlot.y_range.update(start = -100, end = yEndB)\n",
     "            \n",
     "        # if the recent max value is greater than 0:\n",
     "        if recentMaxAB > 0:\n",
     "        \n",
     "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
-    "            coincidenceCountsABPlot.y_range.update(start = -recentMaxAB*0.1, end = recentMaxAB*1.5)\n",
+    "            yEndAB = recentMaxAB*1.5\n",
+    "            coincidenceCountsABPlot.y_range.update(start = -recentMaxAB*0.1, end = yEndAB)\n",
     "        \n",
     "        # else if recent max is 0:\n",
     "        else:\n",
     "            \n",
     "            # reset y-axis to -10 to 10\n",
-    "            coincidenceCountsABPlot.y_range.update(start = -100, end = 1000)\n",
+    "            yEndAB = 1000\n",
+    "            coincidenceCountsABPlot.y_range.update(start = -100, end = yEndAB)\n",
     "            \n",
     "        # if the recent max value is greater than 0:\n",
     "        if recentMaxRatio > 0:\n",
     "        \n",
     "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
-    "            ratioCountsPlot.y_range.update(start = -recentMaxRatio*0.1, end = recentMaxRatio*1.5)\n",
+    "            yEndRatio = recentMaxRatio*1.5\n",
+    "            ratioCountsPlot.y_range.update(start = -recentMaxRatio*0.1, end = yEndRatio)\n",
     "        \n",
     "        # else if recent max is 0:\n",
     "        else:\n",
     "            \n",
     "            # reset y-axis to -10 to 10\n",
-    "            ratioCountsPlot.y_range.update(start = -0.05, end = 0.2)\n",
+    "            yEndRatio = 0.2\n",
+    "            ratioCountsPlot.y_range.update(start = -0.05, end = yEndRatio)\n",
     "    \n",
     "    \n",
     "    # add 1 to reset y-axis counter\n",
@@ -539,16 +608,7 @@
     "    \n",
     "\n",
     "\n",
-    "# Set y_ranges for all three plots\n",
-    "# if you do not do this, you will not be able to alter it later\n",
     "\n",
-    "singleCountsAPlot.y_range = Range1d(-100, 1000)\n",
-    "\n",
-    "singleCountsBPlot.y_range = Range1d(-100, 1000)\n",
-    "\n",
-    "coincidenceCountsABPlot.y_range = Range1d(-100, 1000)\n",
-    "\n",
-    "ratioCountsPlot.y_range = Range1d(-0.01, 0.51)\n",
     "\n",
     "\n",
     "# Define a variable callback_id, which is attached to the periodic_callback function\n",
@@ -671,7 +731,7 @@
     "saveDataButton.js_on_click(CustomJS(args=dict(source=source),\n",
     "                            code=open(join(dirname(__file__), \"download.js\")).read()))\n",
     "\n",
-    "# When number of points is changed, change graph\n",
+    "# When number of points is changed, change follow interval\n",
     "numberPointsSlider.on_change('value', change_number_points)\n",
     "\n",
     "\n",
