--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -441,6 +441,14 @@
     "ratioCountsPlot.y_range = Range1d(-0.01, yEndRatio)\n",
     "\n",
     "\n",
+    "# define global lists for last 5 data points\n",
+    "# use 6 zeros so we can simply change list elements, not append things\n",
+    "\n",
+    "last5A = np.zeros(6)\n",
+    "last5B = np.zeros(6)\n",
+    "last5AB = np.zeros(6)\n",
+    "last5Ratio = np.zeros(6)\n",
+    "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
     "# This function appends new data to our plots through the stream data command\n",
     "def update_data():\n",
@@ -494,6 +502,13 @@
     "    global yEndAB\n",
     "    global yEndRatio\n",
     "    \n",
+    "    # use global last five points lists\n",
+    "    \n",
+    "    global last5A\n",
+    "    global last5B\n",
+    "    global last5AB\n",
+    "    global last5Ratio\n",
+    "    \n",
     "    \n",
     "    # Rescale y-axes as needed:\n",
     "    \n",
@@ -528,6 +543,40 @@
     "        yEndRatio = lastRatio*1.5\n",
     "        ratioCountsPlot.y_range.update(start = -lastRatio*0.1, end = yEndRatio)\n",
     "        \n",
+    "    # for the first five data points, make them the relevant elements of the relevant list\n",
+    "    if resetYAxisCount < 5:\n",
+    "        \n",
+    "        # make the most recent data point the nth element of last5 points list\n",
+    "        last5A[int(resetYAxisCount)] = lastA\n",
+    "        last5B[int(resetYAxisCount)] = lastB\n",
+    "        last5AB[int(resetYAxisCount)] = lastAB\n",
+    "        last5Ratio[int(resetYAxisCount)] = lastRatio\n",
+    "        \n",
+    "    # else if resetYAxisCount >= 5\n",
+    "    else:\n",
+    "        \n",
+    "        # make the most recent point the 6th element of the list\n",
+    "        last5A[5] = lastA\n",
+    "        \n",
+    "        # shift every element of the list back one index\n",
+    "        # this leaves the sixth spot open for the next point to be added next time around\n",
+    "        # having the most recent point repeated in both index [4] and index [5] will not change max calculations\n",
+    "        for i in np.arange(4):\n",
+    "            last5A[i+1] = last5A[i]\n",
+    "            \n",
+    "        last5B[5] = lastB\n",
+    "        for i in np.arange(4):\n",
+    "            last5B[i+1] = last5B[i]\n",
+    "            \n",
+    "        last5AB[5] = lastAB\n",
+    "        for i in np.arange(4):\n",
+    "            last5AB[i+1] = last5AB[i]\n",
+    "            \n",
+    "        last5Ratio[5] = lastRatio\n",
+    "        for i in np.arange(4):\n",
+    "            last5Ratio[i+1] = last5Ratio[i]\n",
+    "        \n",
+    "        \n",
     "        \n",
     "    \n",
     "    # if reset y axis count is divisible by 5 with no remainder\n",
@@ -538,10 +587,10 @@
     "        \n",
     "        \n",
     "        # find the max values of the last 5 data points\n",
-    "        recentMaxA = max(source.data['singleCountsA'][-5:])\n",
-    "        recentMaxB = max(source.data['singleCountsB'][-5:])\n",
-    "        recentMaxAB = max(source.data['coincidenceCountsAB'][-5:])\n",
-    "        recentMaxRatio = max(source.data['ratioCounts'][-5:])\n",
+    "        recentMaxA = max(last5A)\n",
+    "        recentMaxB = max(last5B)\n",
+    "        recentMaxAB = max(last5AB)\n",
+    "        recentMaxRatio = max(last5Ratio)\n",
     "        \n",
     "        \n",
     "        # if the recent max value is greater than 0:\n",
@@ -648,6 +697,16 @@
     "    \n",
     "    global resetYAxisCount\n",
     "    resetYAxisCount = 0\n",
+    "    \n",
+    "    global last5A\n",
+    "    global last5B\n",
+    "    global last5AB\n",
+    "    global last5Ratio\n",
+    "    \n",
+    "    last5A = np.zeros(6)\n",
+    "    last5B = np.zeros(6)\n",
+    "    last5AB = np.zeros(6)\n",
+    "    last5Ratio = np.zeros(6)\n",
     "    \n",
     "    # empty all data lists in source\n",
     "    source.data = {k: [] for k in source.data}\n",
