fixed ratio and g2 rescaling

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -404,7 +404,8 @@
     "\n",
     "\n",
     "# Set up slider for user to choose how many points are displayed (10 to 100)\n",
-    "numberPointsSlider = Slider(start=10, end=100, value=20, step=5, title=\"Number of Points Displayed\", width = 200)\n",
+    "numberPointsSlider = Slider(start=10, end=100, value=20, step=5, title=\"Number of Points Displayed\", \n",
+    "                            width = 200)\n",
     "numberPointsDisplayed = numberPointsSlider.value # initialize the variable to store the counting interval\n",
     "\n",
     "\n",
@@ -470,15 +471,18 @@
     "# Create scatter plots for the ratio plot and add their associated hover tools\n",
     "GTPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGT', source = source, \n",
     "                               line_width=6, line_alpha=0.6, line_color = 'red', legend_label=\"GT\")\n",
-    "ratioPlot.add_tools(HoverTool(renderers=[GTPoints], tooltips=[(\"Time\",\"@timeList\"), (\"Coincidence\", \"GT\"), (\"Ratio\",\"@ratioCountsGT\")], mode='mouse'))\n",
+    "ratioPlot.add_tools(HoverTool(renderers=[GTPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                                (\"Coincidence\", \"GT\"), (\"Ratio\",\"@ratioCountsGT\")], mode='mouse'))\n",
     "\n",
     "GRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGR', source = source, \n",
     "                               line_width=6, line_alpha=0.6, line_color = 'green', legend_label=\"GR\")\n",
-    "ratioPlot.add_tools(HoverTool(renderers=[GRPoints], tooltips=[(\"Time\",\"@timeList\"), (\"Coincidence\", \"GR\"), (\"Ratio\",\"@ratioCountsGR\")], mode='mouse'))\n",
+    "ratioPlot.add_tools(HoverTool(renderers=[GRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                                (\"Coincidence\", \"GR\"), (\"Ratio\",\"@ratioCountsGR\")], mode='mouse'))\n",
     "\n",
     "GTRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGTR', source = source, \n",
     "                               line_width=6, line_alpha=0.6, line_color = 'blue', legend_label=\"GTR\")\n",
-    "ratioPlot.add_tools(HoverTool(renderers=[GTRPoints], tooltips=[(\"Time\",\"@timeList\"), (\"Coincidence\", \"GTR\"), (\"Ratio\",\"@ratioCountsGTR\")], mode='mouse'))\n",
+    "ratioPlot.add_tools(HoverTool(renderers=[GTRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                                (\"Coincidence\", \"GTR\"), (\"Ratio\",\"@ratioCountsGTR\")], mode='mouse'))\n",
     "\n",
     "\n",
     "g2Plot.circle(x = 'timeList', y = 'g2', source = source, \n",
@@ -574,9 +578,9 @@
     "\n",
     "yEndGTR = 1000\n",
     "\n",
-    "#yEndRatio = 1.01\n",
+    "yEndRatio = 1.01\n",
     "\n",
-    "yEndG2 = 2\n",
+    "yEndG2 = 3\n",
     "\n",
     "\n",
     "\n",
@@ -595,9 +599,9 @@
     "\n",
     "coincidenceCountsGTRPlot.y_range = Range1d(-100, yEndGTR)\n",
     "\n",
-    "#ratioPlot.y_range = Range1d(-0.01, yEndRatio)\n",
+    "ratioPlot.y_range = Range1d(-0.01, yEndRatio)\n",
     "\n",
-    "g2Plot.y_range = Range1d(-0.01, yEndG2)\n",
+    "g2Plot.y_range = Range1d(-0.1, yEndG2)\n",
     "\n",
     "\n",
     "# define global lists for last 5 data points\n",
@@ -609,7 +613,7 @@
     "last5GT = np.zeros(6)\n",
     "last5GR = np.zeros(6)\n",
     "last5GTR = np.zeros(6)\n",
-    "#last5Ratio = np.zeros(6)\n",
+    "last5Ratio = np.zeros(18)\n",
     "last5G2 = np.zeros(6)\n",
     "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
@@ -636,7 +640,9 @@
     "    # accidental = N1*N2*deltaT / dwell time\n",
     "    accidentalGT = (counterData[0]*counterData[1]*25*(10**(-9)))/(countingTime)\n",
     "    accidentalGR = (counterData[0]*counterData[2]*25*(10**(-9)))/(countingTime)\n",
-    "    accidentalGTR = ((counterData[3]*counterData[2] + counterData[4]*counterData[1])*25*(10**(-9)))/(countingTime)\n",
+    "    \n",
+    "    numerator = (counterData[3]*counterData[2] + counterData[4]*counterData[1])*25*(10**(-9))\n",
+    "    accidentalGTR = (numerator)/(countingTime)\n",
     "    \n",
     "    # adjusted = total - accidental\n",
     "    #adjustedCoincidenceCounts = counterData[2] - calculatedAccidental\n",
@@ -644,9 +650,9 @@
     "    # ratio = Nc / NG\n",
     "    # avoid dividing by zero\n",
     "    if counterData[0] > 0:\n",
-    "        ratioGT = counterdata[3]/counterData[0]\n",
-    "        ratioGR = counterdata[4]/counterData[0]\n",
-    "        ratioGTR = counterdata[5]/counterData[0]\n",
+    "        ratioGT = counterData[3]/counterData[0]\n",
+    "        ratioGR = counterData[4]/counterData[0]\n",
+    "        ratioGTR = counterData[5]/counterData[0]\n",
     "    else:\n",
     "        #nan = float('nan')\n",
     "        ratioGT = 0 # need to alert the user that this value is not a number\n",
@@ -655,8 +661,8 @@
     "        \n",
     "    # g2 = NGTR * NG / (NGT * NGR)\n",
     "    # avoid dividing by zero \n",
-    "    if counterData[0] > 0:\n",
-    "        g2result = counterdata[5] * counterdata[0] / (counterdata[3] * counterdata[4])\n",
+    "    if counterData[3]*counterData[4] > 0:\n",
+    "        g2result = (counterData[5] * counterData[0]) / (counterData[3] * counterData[4])\n",
     "    else:\n",
     "        #nan = float('nan')\n",
     "        g2result = 0 # need to alert the user that this value is not a number\n",
@@ -689,7 +695,7 @@
     "    global yEndGT\n",
     "    global yEndGR\n",
     "    global yEndGTR\n",
-    "#    global yEndRatio\n",
+    "    global yEndRatio\n",
     "    global yEndG2\n",
     "    \n",
     "    # use global last five points lists\n",
@@ -700,7 +706,7 @@
     "    global last5GT\n",
     "    global last5GR\n",
     "    global last5GTR\n",
-    "#    global last5Ratio\n",
+    "    global last5Ratio\n",
     "    global last5G2\n",
     "    \n",
     "    # Rescale y-axes as needed:\n",
@@ -713,7 +719,9 @@
     "    lastGT = source.data['coincidenceCountsGT'][-1]\n",
     "    lastGR = source.data['coincidenceCountsGR'][-1]\n",
     "    lastGTR = source.data['coincidenceCountsGTR'][-1]\n",
-    "#    lastRatio = source.data['ratioCounts'][-1]\n",
+    "    lastRatioGT = source.data['ratioCountsGT'][-1]\n",
+    "    lastRatioGR = source.data['ratioCountsGR'][-1]\n",
+    "    lastRatioGTR = source.data['ratioCountsGTR'][-1]\n",
     "    lastG2 = source.data['g2'][-1]\n",
     "    \n",
     "    \n",
@@ -749,12 +757,13 @@
     "        # reset the y-axis scaling to show this new high point\n",
     "        yEndGTR = lastGTR*1.5\n",
     "        coincidenceCountsGTRPlot.y_range.update(start = -lastGTR*0.1, end = yEndGTR)\n",
-    "    '''    \n",
-    "    if lastRatio > yEndRatio:   \n",
+    "        \n",
+    "    # if any ratio goes above y range, use max value to extend y range\n",
+    "    if max([lastRatioGT, lastRatioGR, lastRatioGTR]) > yEndRatio:   \n",
     "        # reset the y-axis scaling to show this new high point\n",
-    "        yEndRatio = lastRatio*1.5\n",
-    "        ratioCountsPlot.y_range.update(start = -lastRatio*0.1, end = yEndRatio)\n",
-    "    '''\n",
+    "        yEndRatio = max([lastRatioGT, lastRatioGR, lastRatioGTR])*1.5\n",
+    "        ratioPlot.y_range.update(start = -yEndRatio*0.1, end = yEndRatio)\n",
+    "    \n",
     "    \n",
     "    if lastG2 > yEndG2:   \n",
     "    # reset the y-axis scaling to show this new high point\n",
@@ -771,8 +780,11 @@
     "        last5GT[int(resetYAxisCount)] = lastGT\n",
     "        last5GR[int(resetYAxisCount)] = lastGR\n",
     "        last5GTR[int(resetYAxisCount)] = lastGTR\n",
-    "        #last5Ratio[int(resetYAxisCount)] = lastRatio\n",
     "        last5G2[int(resetYAxisCount)] = lastG2\n",
+    "        \n",
+    "        last5Ratio[int(resetYAxisCount)] = lastRatioGT\n",
+    "        last5Ratio[int(resetYAxisCount)+6] = lastRatioGR\n",
+    "        last5Ratio[int(resetYAxisCount)+12] = lastRatioGTR\n",
     "        \n",
     "    # else if resetYAxisCount >= 5\n",
     "    else:\n",
@@ -781,7 +793,8 @@
     "        last5G[5] = lastG\n",
     "        # shift every element of the list back one index\n",
     "        # this leaves the sixth spot open for the next point to be added next time around\n",
-    "        # having the most recent point repeated in both index [4] and index [5] will not change max calculations\n",
+    "        # having the most recent point repeated in both index [4] and index [5] will not \n",
+    "        # change max calculations\n",
     "        for i in np.arange(4):\n",
     "            last5G[i+1] = last5G[i]\n",
     "            \n",
@@ -805,15 +818,23 @@
     "        for i in np.arange(4):\n",
     "            last5GTR[i+1] = last5GTR[i]\n",
     "           \n",
-    "        '''\n",
-    "        last5Ratio[5] = lastRatio\n",
-    "        for i in np.arange(4):\n",
-    "            last5Ratio[i+1] = last5Ratio[i]\n",
-    "        '''\n",
     "        \n",
     "        last5G2[5] = lastG2\n",
     "        for i in np.arange(4):\n",
     "            last5G2[i+1] = last5G2[i]\n",
+    "            \n",
+    "            \n",
+    "        \n",
+    "        last5Ratio[5] = lastRatioGT\n",
+    "        last5Ratio[11] = lastRatioGR\n",
+    "        last5Ratio[17] = lastRatioGTR\n",
+    "        for i in np.arange(4):\n",
+    "            last5Ratio[i+1] = last5Ratio[i]\n",
+    "        for i in np.arange(4):\n",
+    "            last5Ratio[i+7] = last5Ratio[i]\n",
+    "        for i in np.arange(4):\n",
+    "            last5Ratio[i+13] = last5Ratio[i]\n",
+    "        \n",
     "        \n",
     "    \n",
     "    # if reset y axis count is divisible by 5 with no remainder\n",
@@ -830,7 +851,7 @@
     "        recentMaxGT = max(last5GT)\n",
     "        recentMaxGR = max(last5GR)\n",
     "        recentMaxGTR = max(last5GTR)\n",
-    "        #recentMaxRatio = max(last5Ratio)\n",
+    "        recentMaxRatio = max(last5Ratio)\n",
     "        recentMaxG2 = max(last5G2)\n",
     "        \n",
     "        \n",
@@ -920,21 +941,21 @@
     "          \n",
     "        \n",
     "        \n",
-    "        '''\n",
+    "        \n",
     "        # if the recent max value is greater than 0:\n",
     "        if recentMaxRatio > 0:\n",
     "        \n",
     "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
     "            yEndRatio = recentMaxRatio*1.5\n",
-    "            ratioCountsPlot.y_range.update(start = -recentMaxRatio*0.1, end = yEndRatio)\n",
+    "            ratioPlot.y_range.update(start = -recentMaxRatio*0.1, end = yEndRatio)\n",
     "        \n",
     "        # else if recent max is 0:\n",
     "        else:\n",
     "            \n",
     "            # reset y-axis to -10 to 10\n",
     "            yEndRatio = 0.2\n",
-    "            ratioCountsPlot.y_range.update(start = -0.05, end = yEndRatio)\n",
-    "        '''\n",
+    "            ratioPlot.y_range.update(start = -0.05, end = yEndRatio)\n",
+    "        \n",
     "    \n",
     "        # if the recent max value is greater than 0:\n",
     "        if recentMaxG2 > 0:\n",
@@ -946,9 +967,9 @@
     "        # else if recent max is 0:\n",
     "        else:\n",
     "            \n",
-    "            # reset y-axis to -10 to 10\n",
-    "            yEndG2 = 1000\n",
-    "            g2Plot.y_range.update(start = -100, end = yEndG2)\n",
+    "            # reset y-axis\n",
+    "            yEndG2 = 2\n",
+    "            g2Plot.y_range.update(start = -0.1, end = yEndG2)\n",
     "    \n",
     "    # add 1 to reset y-axis counter\n",
     "    resetYAxisCount = resetYAxisCount + 1\n",
@@ -1004,7 +1025,7 @@
     "    global last5GT\n",
     "    global last5GR\n",
     "    global last5GTR\n",
-    "#    global last5Ratio\n",
+    "    global last5Ratio\n",
     "    global last5G2\n",
     "    \n",
     "    last5G = np.zeros(6)\n",
@@ -1013,7 +1034,7 @@
     "    last5GT = np.zeros(6)\n",
     "    last5GR = np.zeros(6)\n",
     "    last5GTR = np.zeros(6)\n",
-    "#    last5Ratio = np.zeros(6)    \n",
+    "    last5Ratio = np.zeros(18)    \n",
     "    last5G2 = np.zeros(6)\n",
     "    \n",
     "    # empty all data lists in source\n",
@@ -1065,11 +1086,10 @@
     "    \n",
     "    g2Plot.x_range.follow = \"end\"\n",
     "    g2Plot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
-    "    \n",
-    "'''\n",
+    "\n",
     "    ratioPlot.x_range.follow = \"end\"\n",
     "    ratioPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
-    "'''   \n",
+    " \n",
     "\n",
     "\n",
     "        \n",
@@ -1107,10 +1127,9 @@
     "    g2Plot.x_range.follow = \"end\"\n",
     "    g2Plot.x_range.follow_interval = (numberPointsDisplayed)*countingTime    \n",
     "\n",
-    "'''\n",
     "    ratioPlot.x_range.follow = \"end\"\n",
     "    ratioPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
-    "'''    \n",
+    "  \n",
     "\n",
     "\n",
     "    \n",
@@ -1162,7 +1181,8 @@
     "                     ])\n",
     "\n",
     "# create a layout for the graphs interface, with the input widgets and the three plots\n",
-    "displayCountsLayout = layout([[row([userInputWidgets, plotsColumn1, plotsColumn2, plotsColumn3])]] , sizing_mode='scale_both')\n",
+    "displayCountsLayout = layout([[row([userInputWidgets, plotsColumn1, plotsColumn2, plotsColumn3])]] , \n",
+    "                             sizing_mode='scale_both')\n",
     "\n",
     "# create a tab for the set counters interface\n",
     "setCountersTab = Panel(child = setCountersLayout, \n",
@@ -1206,7 +1226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
