split graphs into 3 tabs

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -554,6 +554,21 @@
     "# Set up the save datda button, to export the data to a csv file\n",
     "saveDataButton = Button(label=\"Save Data\", width = 200)\n",
     "\n",
+    "# Make a label reminding counter settings\n",
+    "counterSettings = PreText(text = ''' \n",
+    "Gate --> Port A\n",
+    "Transmitted --> Port B\n",
+    "Reflected --> Port C\n",
+    "\n",
+    "Counter Settings should be\n",
+    "Counter 0: A\n",
+    "Counter 1: B\n",
+    "Counter 2: C\n",
+    "Counter 3: AB\n",
+    "Counter 4: AC\n",
+    "Counter 5: ABC''', width = 200)\n",
+    "\n",
+    "\n",
     "\n",
     "    \n",
     "\n",
@@ -1129,8 +1144,11 @@
     "\n",
     "    ratioPlot.x_range.follow = \"end\"\n",
     "    ratioPlot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
-    "  \n",
+    "    \n",
+    "    \n",
     "\n",
+    "\n",
+    "    \n",
     "\n",
     "    \n",
     "# When the START/STOP button is clicked, call the change_periodic_callback function\n",
@@ -1151,6 +1169,8 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "# Set up layouts and add to document\n",
     "\n",
     "# create a column of user input widgets\n",
@@ -1163,7 +1183,7 @@
     "\n",
     "\n",
     "# create a layout with the set counters interface from the first half of this code\n",
-    "setCountersLayout = layout([[counterInterface]], sizing_mode='scale_both')\n",
+    "setCountersLayout = layout([column([counterInterface, counterSettings])], sizing_mode='scale_both')\n",
     "\n",
     "# create a column with our three plots\n",
     "plotsColumn1 = column([coincidenceCountsGTPlot,\n",
@@ -1181,19 +1201,33 @@
     "                     ])\n",
     "\n",
     "# create a layout for the graphs interface, with the input widgets and the three plots\n",
-    "displayCountsLayout = layout([[row([userInputWidgets, plotsColumn1, plotsColumn2, plotsColumn3])]] , \n",
-    "                             sizing_mode='scale_both')\n",
+    "#displayCountsLayout = layout([[row([userInputWidgets, plotsColumn1, plotsColumn2, plotsColumn3])]] , \n",
+    "#                             sizing_mode='scale_both')\n",
     "\n",
     "# create a tab for the set counters interface\n",
     "setCountersTab = Panel(child = setCountersLayout, \n",
     "                       title=\"Set Counters\")\n",
     "\n",
-    "# create a tab for the graphs interface\n",
-    "displayCountsTab = Panel(child = displayCountsLayout, \n",
-    "                         title=\"Graphs\")\n",
+    "\n",
+    "\n",
+    "singlesCountsLayout = row([userInputWidgets, plotsColumn2])\n",
+    "\n",
+    "coincidenceCountsLayout = row([userInputWidgets, plotsColumn1])\n",
+    "\n",
+    "ratioG2Layout = row([userInputWidgets, plotsColumn3])\n",
+    "\n",
+    "# create tabs for the graphs interface\n",
+    "singlesCountsTab = Panel(child = singlesCountsLayout, \n",
+    "                         title=\"Single Counts\")\n",
+    "\n",
+    "coincidenceCountsTab = Panel(child = coincidenceCountsLayout, \n",
+    "                         title=\"Coincidence Counts\")\n",
+    "\n",
+    "ratioG2Tab = Panel(child = ratioG2Layout, \n",
+    "                         title=\"G2 and Ratios\")\n",
     "\n",
     "# combine all tabs into one layout\n",
-    "currentDocumentTabs = Tabs(tabs=[ displayCountsTab, setCountersTab ])\n",
+    "currentDocumentTabs = Tabs(tabs=[ coincidenceCountsTab, singlesCountsTab, ratioG2Tab, setCountersTab ])\n",
     "\n",
     "\n",
     "# Add tabs to current document\n",
